style: :lipstick: fix overlapping

--- a/packages/wallets/src/features/cashier/modules/Transfer/components/TransferFormAccountSelection/TransferFormAccountSelection.scss
+++ b/packages/wallets/src/features/cashier/modules/Transfer/components/TransferFormAccountSelection/TransferFormAccountSelection.scss
@@ -16,7 +16,6 @@
         height: 100%;
         border-radius: 0;
         box-shadow: none;
-        z-index: 100;
     }
 
     &__loader {
